--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <h1>Welcome to BridgeLabz</h1>
-<img [src]="logoUrl" alt="BridgeLabz Logo" width="200">
+<img [src]="logoUrl" alt="BridgeLabz Logo" width="200" (click)="launchBridgeLabz()" style="cursor: pointer;">
