--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1>Welcome to BridgeLabz</h1>
-<img [src]="logoUrl" alt="BridgeLabz Logo" width="200" (click)="launchBridgeLabz()" style="cursor: pointer;">
+<h1>Hello {{ userName }} from BridgeLabz!</h1>
+
+<!-- Input field with Two-Way Binding -->
+<input type="text" [(ngModel)]="userName" placeholder="Enter your name">
